    [ticket:2531].

  - [bug] Added 'terminating connection' to the list
    of messages we use to detect a disconnect with PG, which
    appears to be present in some versions when the server
    is restarted.  [ticket:2570]

- mysql
  - [bug] Updated mysqlconnector interface to use
    updated "client flag" and "charset" APIs,
    courtesy David McNelis.

- mssql
  - [bug] Fixed compiler bug whereby a given
    select() would be modified if it had an "offset"
    attribute, causing the construct to not compile
    correctly a second time.  [ticket:2545]

0.7.8
=====
- orm
  - [bug] Fixed bug whereby subqueryload() from
    a polymorphic mapping to a target would incur
    a new invocation of the query for each
    distinct class encountered in the polymorphic
    result.  [ticket:2480]

  - [bug] Fixed bug in declarative
    whereby the precedence of columns
    in a joined-table, composite
    column (typically for id) would fail to
    be correct if the columns contained
    names distinct from their attribute
    names.  This would cause things like
    primaryjoin conditions made against the
    entity attributes to be incorrect.  Related
    to [ticket:1892] as this was supposed
    to be part of that, this is [ticket:2491].

  - [feature] The 'objects' argument to
    flush() is no longer deprecated, as some
    valid use cases have been identified.

  - [bug] Fixed identity_key() function which
    was not accepting a scalar argument
    for the identity.  [ticket:2508].

  - [bug] Fixed bug whereby populate_existing
    option would not propagate to subquery
    eager loaders.  [ticket:2497].

- sql
  - [bug] added BIGINT to types.__all__,
    BIGINT, BINARY, VARBINARY to sqlalchemy
    module namespace, plus test to ensure
    this breakage doesn't occur again.
    [ticket:2499]

  - [bug] Repaired common table expression
    rendering to function correctly when the
    SELECT statement contains UNION or other